# federated_learning

./: Cargo.toml  README.md
src/: discovery.rs  main.rs  messages.rs  model.rs  network.rs  node.rs  server.rs
templates/: dashboard.html
