[package]
name = "federated_learning"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-rt = "2.8"
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
rand = "0.8"
log = "0.4"
env_logger = "0.10"
awc = "3.1"
anyhow = "1.0"
futures = "0.3"
etcd-client = "0.8"
once_cell = "1.17"
ndarray = { version = "0.15", features = ["serde"] }
